# cookiecutter-nbis-project

./: .pre-commit-config.yaml  README.md  cookiecutter.json  pyproject.toml
.github/workflows/: ci.yml
tests/: conftest.py  test_cookie.py
tests/nbis_admin/: __init__.py  test_cli.py
{{ cookiecutter.repo_name }}/: .pre-commit-config.yaml  README.md  README.rst  pyproject.toml  setup.cfg
{{ cookiecutter.repo_name }}/src/{{ cookiecutter.python_module }}/: __main__.py  cli.py
{{ cookiecutter.repo_name }}/src/{{ cookiecutter.python_module }}/commands/: admin.py
{{ cookiecutter.repo_name }}/src/{{ cookiecutter.python_module }}/subcommands/: example.py
