[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm>=6.4"]
build-backend = "setuptools.build_meta"

[project]
name = "cookiecutter-nbis-project"
description = "cookiecutter for NBIS projects"
version = "0.0.0.9000"
dependencies = [
    "cookiecutter",
    "pytest",
    "pytest-cookies",
    "pytest-runner",
    "pytest-cov",
    "tox",
]

[tool.pytest.ini_options]
minversion = "7.0"
filterwarnings = [
    "ignore::DeprecationWarning",
]
addopts = "-ra -q --keep-baked-projects"
testpaths = [
    "tests",
    "{{ cookiecutter.repo_name }}/src"
]

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py39
isolated_build = true

[gh-actions]
python =
    3.9: py39

[testenv]
allowlist_externals =
    git
deps =
    build
    pre-commit
    pytest
    pytest-coverage
    pytest-cookies
    pytest-shutil
    pytest-git
    pytest-runner
    pip>=22.1.0
    wheel
    cookiecutter
changedir = {envtmpdir}/project_name
commands = pytest {toxinidir}
         {envbindir}/cookiecutter --no-input {toxinidir} -o .. -f
	 git init -b main .
	 git add -f .
         pre-commit
	 {envbindir}/pip install -e .
	 project_name -h
	 project_name example -h
"""
