[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm>=6.4"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/{{ cookiecutter.python_module }}/_version.py"

[project]
name = "{{ cookiecutter.python_module }}"
description = "{{ cookiecutter.description }}"
readme = "README.md"
# url = https://{{ cookiecutter.project_name}}/
keywords = ["bioinformatics"]
license = {text = "{{ cookiecutter.open_source_license }}"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics"
]
dependencies = [
    # "nbis-project-admin @ git+https://github.com/percyfal/nbis-project-admin.git@main",
    'importlib-metadata; python_version>="3.7"',
]
dynamic = ["version"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "{{ cookiecutter.python_module }}.__version__"}

[project.scripts]
{{ cookiecutter.python_module }} = "{{ cookiecutter.python_module }}.__main__:main"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py39
isolated_build = true

[testenv]
deps =
    pytest
    pytest-coverage
    pytest-runner
    pip>=22.1.0
    wheel
commands = pytest
"""
