[metadata]
name = '{{ cookiecutter.python_module }}'
author = '{{ cookiecutter.author_name }}'
author_email = '{{ cookiecutter.author_email }}'
# url =
description = '{{ cookiecutter.description }}'
long_description = file: README.rst
long_description_content_type = text/x-rst
license='{% if cookiecutter.open_source_license == 'MIT' %}MIT{% elif cookiecutter.open_source_license == 'BSD-3-Clause' %}BSD-3{% endif %}'
# project_urls =
#     ChangeLog =
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Science/Research
    #License ::
    Natural Language :: English
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
python_requires >= 3.7
package_dir =
    = src
packages = find:
# No "install_requires" here, dependencies are managed
# through Conda in environment.yml

[options.packages.find]
where = src

[options.package_data]
'{{ cookiecutter.python_module }}' = '{{ cookiecutter.python_module }}'.yaml, Snakefile, empty.aux

[options.entry_points]
console_scripts =
    '{{ cookiecutter.python_module }}' = '{{ cookiecutter.python_module }}'.__main__:main

[tool:pytest]
addopts = --doctest-modules
testpaths = src/ tests/
